<resources>
    <!-- Common strings -->
    <string name="app_name">Blokada połączeń</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="title_activity_main">Blokowanie połączeń</string>
    <string name="title_activity_permissions_startup">Uprawnienia</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="error">Wystąpił błąd</string>
    <string name="warning_image_description">Ostrzeżenie</string>

    <!-- Strings related to PermissionsStartupActivity -->
    <string name="permissions_startup_activity_header">
        Do korzystania z aplikacji potrzebujemy Twojego pozwolenia.
    </string>
    <string name="permissions_startup_activity_phone_checkbox_header">
        Połączenia telefoniczne
    </string>
    <string name="permissions_startup_activity_phone_checkbox_description">
        Aby móc przechwytywać przychodzące numery, które chcesz zablokować lub pozytywnie ocenić.
    </string>
    <string name="permissions_startup_activity_phone_checkbox_warning">
        Stuknij ZEZWÓL na pytanie o Telefon
    </string>
    <string name="permissions_startup_activity_phone_checkbox_warning_nc">
        Zaznacz pole obok na pytanie o Telefon
    </string>
    <string name="permissions_startup_activity_contacts_checkbox_header">
        Kontakty
    </string>
    <string name="permissions_startup_activity_contacts_checkbox_description">
        Aby móc wyświetlać numery telefonów jako nazwę kontaktu oraz pozwolić blokować numery nieznane.
    </string>
    <string name="permissions_startup_activity_contacts_checkbox_warning">
        Stuknij ZEZWÓL na pytanie o Kontakty
    </string>
    <string name="permissions_startup_activity_contacts_checkbox_warning_nc">
        Zaznacz pole obok na pytanie o Kontakty
    </string>
    <string name="permissions_startup_activity_windows_checkbox_header">
        Wyskakujące okienka
    </string>
    <string name="permissions_startup_activity_windows_checkbox_description">
        Aby móc wyświetlić odpowiednie opcje na ekranie do obsłużenia połączenia dla Ciebie.
    </string>
    <string name="permissions_startup_activity_windows_checkbox_warning">
        Stuknij ZEZWÓL na pytanie o Wyskakujące okienka
    </string>
    <string name="permissions_startup_activity_windows_checkbox_warning_nc">
        Zaznacz pole obok na pytanie o Wyskakujące okienka
    </string>
    <string name="permissions_startup_activity_accept_button">
        Przyznaj dostęp
    </string>

    <!-- String related to StartActivity -->
    <string name="start_activity_action_clear_registry">Wyczyść rejestr</string>
    <string name="phone_block_fragment_clear_registry_confirm">Czy na pewno chcesz usunąć wszystkie dane z rejestru?</string>
    <string name="phone_block_fragment_clear_registry_confirm_title">Czyszczenie rejestru</string>
    <string name="start_activity_section_format">Hello World from section: %1$d</string>
    <string name="start_activity_title_activity_start">StartActivity</string>
    <string name="start_activity_tab_text_1">Start</string>
    <string name="start_activity_tab_text_2">Lista</string>
    <string name="start_activity_tab_text_3">Ustawienia</string>
    <string name="start_activity_fab_manually">Ręcznie</string>
    <string name="start_activity_fab_contacts">Z kontaktów</string>
    <string name="start_activity_fab_calls_registry">Z rejestru połączeń</string>
    <string name="start_activity_call_log_choose_dialog_title">Rejestr ostatnich połączeń</string>
    <string name="start_activity_dialog_rating_title">Ocena dodanego numeru</string>

    <!-- Strings related to SettingsFragment -->
    <string name="settings_fragment_blocking_section_title">Blokowanie</string>
    <string name="settings_fragment_block_switch">Blokowanie połączeń</string>
    <string name="settings_fragment_autoblock_switch">Blokowanie automatyczne (zalecane)</string>
    <string name="settings_fragment_foreign_block_switch">Blokowanie numerów zagranicznych</string>
    <string name="settings_fragment_private_block_switch">Blokowanie numerów zastrzeżonych</string>
    <string name="settings_fragment_unknown_block_switch">Blokowanie nieznanych numerów</string>
    <string name="settings_fragment_global_list_section_title">Opinie o numerach</string>
    <string name="settings_fragment_global_list_allow_sync_switch">Synchronizuj z globalną listą blokowań (zalecane)</string>
    <string name="settings_fragment_notification_section_title">Powiadomienia</string>
    <string name="settings_fragment_notification_block_switch">Powiadomienia o blokowaniach</string>
    <string name="settings_fragment_notification_allow_switch">Powiadamiaj również o przepuszczonych połączeniach</string>

    <!-- Strings related to RegistryFragment -->
    <string name="registry_fragment_action_details">Szczegóły</string>
    <string name="registry_fragment_action_delete">Usuń</string>
    <string name="registry_fragment_action_delete_all_related">Usuń wystąpienia</string>

    <!-- String related to PhoneBlockFragment -->
    <string name="phone_block_fragment_action_settings">Ustawienia</string>
    <string name="phone_block_fragment_action_search">Wyszukaj</string>
    <string name="phone_block_fragment_action_delete">Usuń</string>
    <string name="phone_block_fragment_delete_confirm_title">Usuwanie numerów z listy</string>
    <string name="phone_block_fragment_delete_confirm">Czy na pewno usunąć zaznaczone numery?</string>
    <string name="phone_block_fragment_action_set_as_negative">Blokuj</string>
    <string name="phone_block_fragment_action_set_as_positive">Toleruj</string>
    <string name="phone_block_fragment_action_details">Szczegóły</string>
    <string name="phone_block_fragment_action_edit">Edytuj</string>
    <string name="phone_block_fragment_action_select_all">Zaznacz wszystkie</string>
    <string name="phone_block_fragment_action_unselect_all">Odznacz wszystkie</string>

    <!-- Strings related to AddPhoneBlock -->
    <string name="add_phone_block_title">Nowy numer</string>
    <string name="add_phone_block_nr_blocked_hint">Wpisz numer telefonu</string>
    <string name="add_phone_block_category_header">Kategoria</string>
    <string name="add_phone_block_description_hint">Opisz powód blokowania</string>
    <string name="add_phone_block_button_add">Dodaj numer do listy</string>
    <string name="add_phone_block_is_positive_switch">Dodaj jako pozytywny (tolerowany)</string>
    <string name="add_phone_block_added">Numer dodany</string>
    <string name="add_phone_block_already_exist">Numer już istnieje na liście</string>
    <string name="add_phone_block_error_invalid">Numer jest nieprawidłowy</string>
    <string name="add_phone_block_error_empty">Numer telefonu jest wymagany</string>

    <!-- Strings related to EditPhoneBlock -->
    <string name="edit_phone_block_title">Edycja numeru</string>
    <string name="edit_phone_block_button_add">Edytuj numer</string>
    <string name="edit_phone_block_is_positive_switch">Zapisz jako pozytywny (tolerowany)</string>
    <string name="add_phone_block_edited">Numer wyedytowany</string>

    <!-- Strings related to DetailsPhoneBlock -->
    <string name="details_phone_block_title">Szczegóły numeru</string>


    <!-- String related to CallDetector -->
    <string name="call_detector_choose_category_title">Wybierz kategorię</string>
    <string name="call_detector_has_blocked">Zablokowano</string>
    <string name="call_detector_has_allowed">Przepuszczono</string>
    <string name="call_detector_private_number">Numer prywatny</string>
    <string name="call_detector_has_saved_positive">Zapisano jako tolerowany</string>
    <string name="call_detector_changed_to_positive">Zmieniono na tolerowany</string>
    <string name="call_detector_already_blocked">Numer jest już zablokowany!</string>
    <string name="call_detector_is_blocked_by_you">Ten numer jest przez Ciebie blokowany</string>
    <string name="call_detector_is_blocked_by_community">Ten numer jest blokowany przez społeczność</string>
    <string name="call_detector_is_blocked_by_community_subtitle">Negatywne oceny</string>
    <string name="call_detector_channel_name">Blokowanie połączeń</string>
    <string name="call_detector_channel_description">Kanał przeznaczony do zarządzania powiadomieniami związanymi z blokowaniem połączeń</string>
</resources>
