<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ukasz.phonecallsblocker.StartActivity">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        android:title="@string/phone_block_fragment_action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_action_set_as_negative"
        android:orderInCategory="100"
        android:title="@string/phone_block_fragment_action_set_as_negative"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_set_as_positive"
        android:orderInCategory="100"
        android:title="@string/phone_block_fragment_action_set_as_positive"
        app:showAsAction="never" />
</menu>