<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.ukasz.phonecallsblocker.StartActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/start_activity_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <!--android:paddingTop="@dimen/appbar_padding_top"-->

        <android.support.v7.widget.Toolbar
            android:id="@+id/start_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/start_activity_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorHeight="4dp">

            <android.support.design.widget.TabItem
                android:id="@+id/start_activity_tabItem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_activity_tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/start_activity_tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_activity_tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/start_activity_tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_activity_tab_text_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <com.example.ukasz.phonecallsblocker.tab_layout_helper.CustomViewPager
        android:id="@+id/start_activity_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.github.clans.fab.FloatingActionMenu
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/start_activity_fab"
        app:menu_icon="@drawable/ic_add_white_24dp"
        app:menu_colorNormal="@color/colorPrimary"
        app:menu_colorRipple="@color/colorAccent"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_openDirection="up"
        app:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/start_activity_fab_calls_registry"
            app:fab_size="mini"
            android:id="@+id/start_activity_add_calls_registry"
            android:src="@drawable/ic_registry_white_24dp"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent" />

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/start_activity_fab_contacts"
            app:fab_size="mini"
            android:id="@+id/start_activity_add_contacts"
            android:src="@drawable/ic_contacts_white_24dp"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent" />

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/start_activity_fab_manually"
            app:fab_size="mini"
            android:id="@+id/start_activity_add_manually"
            android:src="@drawable/ic_manually_white_24dp"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
